force-app/main/default/objects/Opportunity/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>AE</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>AE_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>