force-app/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <inlineHelpText>ACV = (TCV - one-time fees) / total years in contract</inlineHelpText>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>