force-app/main/default/objects/Opportunity/fields/ACV_Growth__c.field-meta.xml
<CustomField>
    <fullName>ACV_Growth__c</fullName>
    <label>ACV Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>