force-app/main/default/objects/Opportunity/fields/ACV_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>ACV_Override_Reason__c</fullName>
    <description>must be populated to allow ACV override.</description>
    <label>ACV Override Reason</label>
    <type>TextArea</type>
</CustomField>