force-app/main/default/objects/Opportunity/fields/Additional_Notes_or_Key_Points__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_or_Key_Points__c</fullName>
    <label>Additional Notes or Key Points</label>
    <type>TextArea</type>
</CustomField>