force-app/main/default/objects/Opportunity/fields/Amended_Contract__c.field-meta.xml
<CustomField>
    <fullName>Amended_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amended Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (Amended Contract)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>