force-app/main/default/objects/Opportunity/fields/Approx_Census_Opp__c.field-meta.xml
<CustomField>
    <fullName>Approx_Census_Opp__c</fullName>
    <formula>Account.Approx_Census__c</formula>
    <label>Approx. Census (Opp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>