force-app/main/default/objects/Opportunity/fields/Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company__c</fullName>
    <label>Billing Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Hansei</fullName>
            </value>
            <value>
                <fullName>Billing Solutions</fullName>
            </value>
            <value>
                <fullName>MD Solutions</fullName>
            </value>
            <value>
                <fullName>SJ Billing</fullName>
            </value>
            <value>
                <fullName>Element MB</fullName>
            </value>
            <value>
                <fullName>Aspire MB</fullName>
            </value>
            <value>
                <fullName>Mt Yonah</fullName>
            </value>
            <value>
                <fullName>Prosperity BH</fullName>
            </value>
            <value>
                <fullName>CA Billing</fullName>
            </value>
            <value>
                <fullName>Data Pro</fullName>
            </value>
            <value>
                <fullName>Compass Revenue Solutions</fullName>
            </value>
            <value>
                <fullName>United Billing Solutions</fullName>
            </value>
            <value>
                <fullName>Nextus Billing Solutions</fullName>
            </value>
            <value>
                <fullName>Aftermath Billing</fullName>
            </value>
            <value>
                <fullName>Interface Billing</fullName>
            </value>
            <value>
                <fullName>Keystone Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>