force-app/main/default/objects/Opportunity/fields/Billing_Software__c.field-meta.xml
<CustomField>
    <fullName>Billing_Software__c</fullName>
    <label>Billing Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Software</valueSetName>
    </valueSet>
</CustomField>