force-app/main/default/objects/Opportunity/fields/Billing_Software_Opp__c.field-meta.xml
<CustomField>
    <fullName>Billing_Software_Opp__c</fullName>
    <formula>TEXT( Account.Billing_Software__c )</formula>
    <label>Billing Software (Opp)</label>
    <type>Text</type>
</CustomField>