force-app/main/default/objects/Opportunity/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <label>Care Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inpatient</fullName>
            </value>
            <value>
                <fullName>Outpatient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>