force-app/main/default/objects/Opportunity/fields/Care_Type_Opp__c.field-meta.xml
<CustomField>
    <fullName>Care_Type_Opp__c</fullName>
    <formula>TEXT( Account.Care_Type__c )</formula>
    <label>Care Type (Opp)</label>
    <type>Text</type>
</CustomField>