force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>