force-app/main/default/objects/Opportunity/fields/Churn_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Churn_Notification_Date__c</fullName>
    <label>Churn Notification Date</label>
    <type>Date</type>
</CustomField>