force-app/main/default/objects/Opportunity/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Axiom</fullName>
            </value>
            <value>
                <fullName>Behave Health</fullName>
            </value>
            <value>
                <fullName>FiveCRM</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>Kipu CRM</fullName>
            </value>
            <value>
                <fullName>Leads360</fullName>
            </value>
            <value>
                <fullName>LeadSquared</fullName>
            </value>
            <value>
                <fullName>LightningStep</fullName>
            </value>
            <value>
                <fullName>New Resilience</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>Sunwave</fullName>
            </value>
            <value>
                <fullName>Supportable</fullName>
            </value>
            <value>
                <fullName>Zoho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>