force-app/main/default/objects/Opportunity/fields/Contact_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_Address__c</fullName>
    <label>Billing Contact Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>