force-app/main/default/objects/Opportunity/fields/Contact_Billing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Billing_Phone__c</fullName>
    <label>Billing Phone</label>
    <type>Phone</type>
</CustomField>