force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>IF(
Term_Months__c - FLOOR(Term_Months__c) = 0,
ADDMONTHS( Contract_Start_Date__c , FLOOR(Term_Months__c)) - 1,
 Contract_Start_Date__c  + (Term_Months__c * 30.44)
)</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>