force-app/main/default/objects/Opportunity/fields/Current_CRM__c.field-meta.xml
<CustomField>
    <fullName>Current_CRM__c</fullName>
    <label>Current CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_CRM</valueSetName>
    </valueSet>
</CustomField>