force-app/main/default/objects/Opportunity/fields/Current_CRM_Opp__c.field-meta.xml
<CustomField>
    <fullName>Current_CRM_Opp__c</fullName>
    <formula>TEXT(Account.Current_CRM__c)</formula>
    <label>Current CRM (Opp)</label>
    <type>Text</type>
</CustomField>