force-app/main/default/objects/Opportunity/fields/Current_EMR__c.field-meta.xml
<CustomField>
    <fullName>Current_EMR__c</fullName>
    <label>Current EMR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_EMR</valueSetName>
    </valueSet>
</CustomField>