force-app/main/default/objects/Opportunity/fields/Current_EMR_Opp__c.field-meta.xml
<CustomField>
    <fullName>Current_EMR_Opp__c</fullName>
    <formula>TEXT( Account.Current_EMR__c )</formula>
    <label>Current EMR (Opp)</label>
    <type>Text</type>
</CustomField>