force-app/main/default/objects/Opportunity/fields/Current_VOIP_Opp__c.field-meta.xml
<CustomField>
    <fullName>Current_VOIP_Opp__c</fullName>
    <formula>TEXT( Account.Current_VOIP__c )</formula>
    <label>Current VOIP (Opp)</label>
    <type>Text</type>
</CustomField>