force-app/main/default/objects/Opportunity/fields/Customer_included_data_migration__c.field-meta.xml
<CustomField>
    <fullName>Customer_included_data_migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer included data migration?</label>
    <type>Checkbox</type>
</CustomField>