force-app/main/default/objects/Opportunity/fields/Data_Migration_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Requirements__c</fullName>
    <label>Data Migration Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>