force-app/main/default/objects/Opportunity/fields/Dazos_Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>Dazos_Opp_ID__c</fullName>
    <label>Dazos Opp ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>