force-app/main/default/objects/Opportunity/fields/Deal_Tier__c.field-meta.xml
<CustomField>
    <fullName>Deal_Tier__c</fullName>
    <label>Deal Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1 (Best Case)</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4 (Hail Mary)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>