force-app/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <label>Decision Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>