force-app/main/default/objects/Opportunity/fields/Downgrade_Notes__c.field-meta.xml
<CustomField>
    <fullName>Downgrade_Notes__c</fullName>
    <label>Downgrade Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>