force-app/main/default/objects/Opportunity/fields/Generate_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Generate_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Admin only: Will generate renewal and contract records. Use when adjusting the existing opportunity and you need to realign the renewal and contract</inlineHelpText>
    <label>Generate Renewal</label>
    <type>Checkbox</type>
</CustomField>