force-app/main/default/objects/Opportunity/fields/Has_Attached_File__c.field-meta.xml
<CustomField>
    <fullName>Has_Attached_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by automation on moving to closed.</description>
    <label>Has Attached File?</label>
    <type>Checkbox</type>
</CustomField>