force-app/main/default/objects/Opportunity/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <label>Headquarters?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>