force-app/main/default/objects/Opportunity/fields/Implementation_Check__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Check__c</fullName>
    <description>Confirms that the customer does not require any integrations or data migration before implementation.</description>
    <inlineHelpText>Confirms that the customer does not require any integrations or data migration before implementation.</inlineHelpText>
    <label>Implementation Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Confirmed</fullName>
                <default>true</default>
                <label>Not Confirmed</label>
            </value>
            <value>
                <fullName>Confirmed – No Integrations or Data Migration Required</fullName>
            </value>
            <value>
                <fullName>Needs Review for Both</fullName>
            </value>
            <value>
                <fullName>Confirmed Integrations</fullName>
            </value>
            <value>
                <fullName>Confirmed Data Migration</fullName>
            </value>
            <value>
                <fullName>Confirmed Integrations; Needs Review of Data Migration</fullName>
                <isActive>false</isActive>
                <label>Confirmed Integrations; Needs Review of Data Migration</label>
            </value>
            <value>
                <fullName>Needs Review for Integrations; Confirmed Data Migration</fullName>
                <isActive>false</isActive>
                <label>Needs Review for Integrations; Confirmed Data Migration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>