force-app/main/default/objects/Opportunity/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>