force-app/main/default/objects/Opportunity/fields/Implemention_Discussed_with_customer__c.field-meta.xml
<CustomField>
    <fullName>Implemention_Discussed_with_customer__c</fullName>
    <label>Implemention Discussed With Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>