force-app/main/default/objects/Opportunity/fields/Initial_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Demo_Date__c</fullName>
    <label>Initial Demo Date</label>
    <type>Date</type>
</CustomField>