force-app/main/default/objects/Opportunity/fields/Integrations_Needed__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Needed__c</fullName>
    <label>Integrations Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KIPU</fullName>
            </value>
            <value>
                <fullName>Alleva</fullName>
            </value>
            <value>
                <fullName>Opus</fullName>
            </value>
            <value>
                <fullName>Best Notes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Sunwave</fullName>
            </value>
            <value>
                <fullName>Lightning Step</fullName>
            </value>
            <value>
                <fullName>Ritten</fullName>
            </value>
            <value>
                <fullName>RETHINK</fullName>
            </value>
            <value>
                <fullName>Advanced MD</fullName>
            </value>
            <value>
                <fullName>My Avatar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>