force-app/main/default/objects/Opportunity/fields/Invoice_Period__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Period__c</fullName>
    <defaultValue>&quot;Annually&quot;</defaultValue>
    <inlineHelpText>The time span (start date to end date) for which charges are being billed on an invoice.</inlineHelpText>
    <label>Invoice Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Biannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>