force-app/main/default/objects/Opportunity/fields/Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>