force-app/main/default/objects/Opportunity/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Dazos Sales Team</fullName>
            </value>
            <value>
                <fullName>Form Fill</fullName>
            </value>
            <value>
                <fullName>iVerify Signup</fullName>
            </value>
            <value>
                <fullName>Affiliate/Referral Partner</fullName>
            </value>
            <value>
                <fullName>Dazos Customer</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Bought Leads</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>