force-app/main/default/objects/Opportunity/fields/Levels_of_Care__c.field-meta.xml
<CustomField>
    <fullName>Levels_of_Care__c</fullName>
    <label>Levels of Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder 1</fullName>
            </value>
            <value>
                <fullName>Placeholder 2</fullName>
            </value>
            <value>
                <fullName>Placeholder 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>