force-app/main/default/objects/Opportunity/fields/Levels_of_Care_Opp__c.field-meta.xml
<CustomField>
    <fullName>Levels_of_Care_Opp__c</fullName>
    <formula>TEXT( Account.Levels_of_Care__c )</formula>
    <label>Levels of Care (Opp)</label>
    <type>Text</type>
</CustomField>