force-app/main/default/objects/Opportunity/fields/Locations_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Locations_Facilities__c</fullName>
    <label>Locations &amp; Facilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>