force-app/main/default/objects/Opportunity/fields/Loss_Details__c.field-meta.xml
<CustomField>
    <fullName>Loss_Details__c</fullName>
    <label>Loss Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>