force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>*** IF THIS LIST IS EDITED *** 
The [Contract] Early Termination screen flow must also be edited. The picklist values are manually created in that flow.</description>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>EMR Integration Issues</fullName>
            </value>
            <value>
                <fullName>Failure to Implement or Go Live</fullName>
            </value>
            <value>
                <fullName>Integration Features</fullName>
            </value>
            <value>
                <fullName>Lack of Adoption</fullName>
            </value>
            <value>
                <fullName>Loss of Champion or Turnover</fullName>
            </value>
            <value>
                <fullName>Missing Crucial Features</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Not User Friendly / Too Difficult</fullName>
            </value>
            <value>
                <fullName>Not Worth It</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Product Bugs or Issues</fullName>
            </value>
            <value>
                <fullName>Stopped Paying - No Contact</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Unhappy with Support</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>