force-app/main/default/objects/Opportunity/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <label>Metrics</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>