force-app/main/default/objects/Opportunity/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <inlineHelpText>MRR = Total monthly revenue from recurring subscriptions.</inlineHelpText>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>