force-app/main/default/objects/Opportunity/fields/Non_Renewal_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Non_Renewal_Notice_Days__c</fullName>
    <description>Number of days before the end of the current subscription period</description>
    <inlineHelpText>The number of days before the end of the current subscription period for which the customer can opt out</inlineHelpText>
    <label>Non-Renewal Notice Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>