force-app/main/default/objects/Opportunity/fields/One_Time_Fees__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fees__c</fullName>
    <inlineHelpText>One-time fees are charges that are billed only once and are not recurring.</inlineHelpText>
    <label>One-Time Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>