force-app/main/default/objects/Opportunity/fields/Original_ACV__c.field-meta.xml
<CustomField>
    <fullName>Original_ACV__c</fullName>
    <description>The original ACV value when this renewal was created, to be used in calculating ACV growth. For new business, this will be the same as the standard ACV field and growth will always be $0.</description>
    <inlineHelpText>The original ACV value when this renewal was created, to be used in calculating ACV growth. For new business, this will be the same as the standard ACV field and growth will always be $0.</inlineHelpText>
    <label>Original ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>