force-app/main/default/objects/Opportunity/fields/Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Original Opportunity)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>