force-app/main/default/objects/Opportunity/fields/Original_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Renewal_Date__c</fullName>
    <inlineHelpText>The first scheduled date on which the subscription was set to renew, based on the original agreement.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>