force-app/main/default/objects/Opportunity/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <description>Loss Reason (Other)</description>
    <label>Other Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>