force-app/main/default/objects/Opportunity/fields/Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process__c</fullName>
    <label>Paper Process</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>