force-app/main/default/objects/Opportunity/fields/Past_CRM_Technology_Experience__c.field-meta.xml
<CustomField>
    <fullName>Past_CRM_Technology_Experience__c</fullName>
    <label>Past CRM &amp; Technology Experience</label>
    <type>TextArea</type>
</CustomField>